--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <h1> This is my test</h1>
+    <p> Testing Testing 123</p>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
