--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" type="text/css" href="index.css">
 
     <title>IT 4403 Individual Project</title>
   </head>
   <body>
 
-    <h1> This is my test</h1>
-    <p> Testing Testing 123</p>
+    <!-- Navigation Bar -->
+    <ul id="navbar">
+      <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
+      <li><a href="">Milestone 1</a></li>
+      <li><a href="">Milestone 2</a></li>
+      <li><a href="">Milestone 3</a></li>
+      <li><a href="">Milestone 4</a></li>
+    </ul>
+
+    <h1> IT 4403 Individual Project </h1>
 
   </body>
 </html>
