--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     <!-- Navigation Bar -->
     <div class = "navbar">
       <ul>
-          <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
-          <li><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></li>
-          <li><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></li>
-          <li><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></li>
-          <li><a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a></li>
-        </ul>
-      <div>
+        <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
+        <li><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></li>
+        <li><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></li>
+        <li><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></li>
+        <li><a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a></li>
+      </ul>
+    </div>
 
     <h1 style="text-align:center;"> IT 4403 Individual Project </h1>
 
