--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <div class = "navbar">
       <ul>
-        <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
+        <li style="list-style-type:none;"><a href="%PUBLIC_URL%/index.html"> Home </a></li>
         <li><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></li>
         <li><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></li>
         <li><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></li>
@@ -22,7 +22,16 @@
       </ul>
     </div>
 
-    <h1 style="text-align:center;"> IT 4403 Individual Project </h1>
+    <div> 
+      <h1 style="text-align:center;"> IT 4403 Individual Project </h1>
 
+      <h2>Course Information</h2>
+      <p>Name: Gabrielle Hooper</p>
+      <p>Course: IT 4403 - Advanced Web and Mobile Application</p>
+      <p>Section / Semester: W-01 / Summer 2023</p>
+      <p>Course Instructor: Dr. Zhigang Li</p>
+      <p>Department of Information Technology Link: <a href=""> Department of Information Technology</a></p>
+
+    </div>
   </body>
 </html>
