--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <div class = "navbar">
       <ul>
-        <li style="list-style-type:none;"><a href="%PUBLIC_URL%/index.html"> Home </a></li>
+        <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
         <li><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></li>
         <li><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></li>
         <li><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></li>
@@ -32,6 +32,11 @@
       <p>Course Instructor: Dr. Zhigang Li</p>
       <p>Department of Information Technology Link: <a href=""> Department of Information Technology</a></p>
 
+      <h2> Table of Contents </h2>
+      <p><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></p>
+      <p><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></p>
+      <p><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></p>
+      <p><a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a></p>
     </div>
   </body>
 </html>
