Fixing Nav bar and content pt. 2

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
 
-    <div> 
+    <div class="content"> 
       <h1 style="text-align:center;"> IT 4403 Individual Project </h1>
 
       <h2>Course Information</h2>
