Adding nav to extra pages and fixing minor things.

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
     <!-- Navigation Bar -->
     <div class = "navbar">
       <ul>
-        <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
-        <li><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></li>
-        <li><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></li>
-        <li><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></li>
-        <li><a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a></li>
+        <a href="%PUBLIC_URL%/index.html"> Home </a>
+        <a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a>
+        <a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a>
+        <a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a>
+        <a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a>
       </ul>
     </div>
 
