--- a/public/Milestone3.html
+++ b/public/Milestone3.html
@@ -13,11 +13,11 @@
         <!-- Navigation Bar -->
         <div class = "navbar">
             <ul>
-            <li><a href="%PUBLIC_URL%/index.html"> Home </a></li>
-            <li><a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a></li>
-            <li><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></li>
-            <li><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></li>
-            <li><a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a></li>
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="Milestone1.html">Milestone 1</a></li>
+            <li><a href="Milestone2.html">Milestone 2</a></li>
+            <li><a href="Milestone3.html">Milestone 3</a></li>
+            <li><a href="Milestone4.html">Milestone 4</a></li>
             </ul>
         </div>
     </body>
