--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <div class = "navbar">
       <ul>
         <a href="%PUBLIC_URL%/index.html"> Home </a>
-        <a href="%PUBLIC_URL%/Milestone1.html">Milestone 1</a>
-        <a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a>
-        <a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a>
-        <a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a>
+        <a href="Milestone1.html">Milestone 1</a>
+        <a href="Milestone2.html">Milestone 2</a>
+        <a href="Milestone3.html">Milestone 3</a>
+        <a href="Milestone4.html">Milestone 4</a>
       </ul>
     </div>
 
