--- a/public/Milestone2.html
+++ b/public/Milestone2.html
@@ -13,7 +13,7 @@
         <!-- Navigation Bar -->
         <div class = "navbar">
             <ul>
-                <a href="%PUBLIC_URL%/index.html"> Home </a>
+                <a href="index.html"> Home </a>
                 <a href="Milestone1.html">Milestone 1</a>
                 <a href="Milestone2.html">Milestone 2</a>
                 <a href="Milestone3.html">Milestone 3</a>
