--- a/public/Milestone1.html
+++ b/public/Milestone1.html
@@ -5,13 +5,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <meta name="theme-color" content="#000000"/>
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-      <link rel="stylesheet" type="text/css" href="index.css"/>
+      <link rel="stylesheet" type="text/css" href="/src/index.css"/>
   
       <title>IT 4403 Individual Project</title>
     </head>
     <body>
         <!-- Navigation Bar -->
-        <div class = "navbar"> 
+        <div class="navbar"> 
             <a href="index.html"> Home </a>
             <a href="Milestone1.html">Milestone 1</a>
             <a href="Milestone2.html">Milestone 2</a>
