--- a/public/Milestone4.html
+++ b/public/Milestone4.html
@@ -5,7 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <meta name="theme-color" content="#000000"/>
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-      <link rel="stylesheet" type="text/css" href="index.css">
+      <link rel="icon" type="image/png" href="favicon.png"/>
+      <link rel="stylesheet" type="text/css" href="/src/index.css"/>
   
       <title>IT 4403 Individual Project</title>
     </head>
