Trying to fix this shit.

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,19 @@
 
     <!-- Navigation Bar -->
     <div class = "navbar"> 
-      <a href="index.html"> Home </a>
-      <a href="Milestone1.html">Milestone 1</a>
-      <a href="Milestone2.html">Milestone 2</a>
-      <a href="Milestone3.html">Milestone 3</a>
-      <a href="Milestone4.html">Milestone 4</a>
+      <ul>
+        <li><a href="index.html"> Home </a></li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Milestone 1</a>
+          <div class="dropdown-content">
+            <a href="Single_Book.html">Single Book</a>
+            <a href="Search_Page.html">Search Page</a>
+          </div>
+        </li>
+        <li><a href="Milestone2.html">Milestone 2</a></li>
+        <li><a href="Milestone3.html">Milestone 3</a></li>
+        <li><a href="Milestone4.html">Milestone 4</a></li>
+      </ul>
     </div>
 
     <div class="content"> 
