--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" type="image/png" href="favicon.png"/>
-    <link rel="stylesheet" type="text/css" href="/src/index.css"/>
+    <link rel="stylesheet" href="/src/index.css"/>
 
     <title>IT 4403 Individual Project</title>
   </head>
