adding test page

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         <li><a href="Milestone2.html">Milestone 2</a></li>
         <li><a href="Milestone3.html">Milestone 3</a></li>
         <li><a href="Milestone4.html">Milestone 4</a></li>
+        <li><a href="Testing-Page.html">Testing Page</a></li>
       </ul>
     </div>
 
