Fixing sidenav pt. 2

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <!-- Navigation Bar -->
-    <div class = "sidnav"> 
+    <div class = "sidenav"> 
         <a href="index.html"> Home </a></li>
         <!-- Milestone 1 Dropdown Button -->
         <button class="dropdown-btn">
