--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,25 @@
     <link rel="icon" type="image/png" href="favicon.png"/>
     <link rel="stylesheet" href="/src/index.css"/>
 
+    <!-- Dropdown Script -->
+    <script>    
+      var dropdown = document.getElementsByClassName("dropdown-btn");
+      var i;
+      
+      for (i = 0; i < dropdown.length; i++) {
+        dropdown[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var dropdownContent = this.nextElementSibling;
+          if (dropdownContent.style.display === "block") {
+            dropdownContent.style.display = "none";
+          } else {
+            dropdownContent.style.display = "block";
+          }
+        });
+      }
+      </script>
+
+
     <title>IT 4403 Individual Project</title>
   </head>
   <body>
@@ -53,12 +72,15 @@
       <p><a href="%PUBLIC_URL%/Milestone2.html">Milestone 2</a></p>
       <p><a href="%PUBLIC_URL%/Milestone3.html">Milestone 3</a></p>
       <p><a href="%PUBLIC_URL%/Milestone4.html">Milestone 4</a></p>
-    </div>
+    
+      <!--Footer-->
+      <footer>
+        <p>This is a project for IT 4403 by Gabrielle Hooper</p>
+      </footer>
 
-    <!--Footer-->
-    <footer>
-      <p>This is a project for IT 4403 by Gabrielle Hooper</p>
-    </footer>
+    </div>
+    <!-- End of Content -->
+
 
   </body>
 </html>
