--- a/public/Single_Book.html
+++ b/public/Single_Book.html
@@ -199,8 +199,40 @@
             padding-left: 30px;
         }
 
+        /*Creating container for content*/
+        .container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100%;
+        }
+
+        .box {
+
+          text-align: left;
+          padding: 20px;
+        }
+
         body {
             font-family: Georgia, 'Times New Roman', Times, serif;
+        }
+
+                /* Add style to the footer*/
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: black;
+            color: white;
+            text-align: center;
+        }
+
+        footer {
+            background-color: black;
+            color: white;
+            padding: 10px;
+            text-align: center;
         }
 
 
