--- a/public/Single_Book.html
+++ b/public/Single_Book.html
@@ -201,10 +201,12 @@
 
         /*Creating container for content*/
         .container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100%;
+            margin-left: 200px;
+            padding-left: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
         }
 
         .box {
@@ -217,7 +219,7 @@
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
 
-                /* Add style to the footer*/
+        /* Add style to the footer*/
         .footer {
             position: fixed;
             left: 0;
