Fixing Footnote and extra pages

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     <!-- End of Content -->
 
     <!--Footer-->
-    <footer>
+    <footer style="position: fixed;">
       <p>This is a project for IT 4403 by Gabrielle Hooper</p>
     </footer>
 
