--- a/public/Milestone4.html
+++ b/public/Milestone4.html
@@ -82,6 +82,42 @@
                 font-family: Georgia, 'Times New Roman', Times, serif;
             }
 
+            /*Creating container for content*/
+            .container {
+                margin-left: 200px;
+                padding-left: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+            }
+
+            .box {
+            text-align: left;
+            padding: 20px;
+            }
+
+            body {
+                font-family: Georgia, 'Times New Roman', Times, serif;
+            }
+
+            /* Add style to the footer*/
+            .footer {
+                position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: black;
+                color: white;
+                text-align: center;
+            }
+
+            footer {
+                background-color: black;
+                color: white;
+                padding: 10px;
+                text-align: center;
+            }
 
         </style>
 
@@ -109,6 +145,12 @@
         </div>
         <!-- End Navigation Bar -->
 
+        <!-- Content -->
+        <div class = "Content">
+            <h1 style = "text-align:center;"> Milestone 4 </h1>
+        </div>
+        <!-- End Content -->
+        
         <!--Footer-->
         <footer>
             <p>This is a project for IT 4403 by Gabrielle Hooper</p>
