--- a/public/Milestone1.html
+++ b/public/Milestone1.html
@@ -93,8 +93,8 @@
             }
 
             .box {
-            text-align: left;
-            padding: 20px;
+                text-align: left;
+                padding: 20px;
             }
 
             body {
@@ -117,6 +117,7 @@
                 color: white;
                 padding: 10px;
                 text-align: center;
+                margin-left: 200px;
             }
 
 
@@ -142,7 +143,6 @@
             <a href="Milestone2.html">Milestone 2</a>
             <a href="Milestone3.html">Milestone 3</a>
             <a href="Milestone4.html">Milestone 4</a>
-            <a href="Testing-Page.html">Testing Page</a>
         </div>
         <!-- End Navigation Bar -->
 
