--- a/public/Single_Book.html
+++ b/public/Single_Book.html
@@ -234,6 +234,7 @@
             color: white;
             padding: 10px;
             text-align: center;
+            margin-left: 200px;
         }
 
 
@@ -260,7 +261,6 @@
             <a href="Milestone2.html">Milestone 2</a>
             <a href="Milestone3.html">Milestone 3</a>
             <a href="Milestone4.html">Milestone 4</a>
-            <a href="Testing-Page.html">Testing Page</a>
         </div>
         <!-- End Navigation Bar -->
 
