--- a/public/Milestone3.html
+++ b/public/Milestone3.html
@@ -102,21 +102,17 @@
             }
 
             /* Add style to the footer*/
-            .footer {
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: black;
-                color: white;
-                text-align: center;
-            }
-
             footer {
                 background-color: black;
                 color: white;
                 padding: 10px;
                 text-align: center;
+                margin-left: 200px;
+                position: absolute;
+                left: 0;
+                bottom: 0;     
+                width: 100%;
+                height: 60px;
             }
 
         </style>
