--- a/public/Search_Page.html
+++ b/public/Search_Page.html
@@ -96,22 +96,17 @@
             padding: 20px;
             }
 
-            /* Add style to the footer*/
-            .footer {
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: black;
-                color: white;
-                text-align: center;
-            }
-
             footer {
                 background-color: black;
                 color: white;
                 padding: 10px;
                 text-align: center;
+                margin-left: 200px;
+                position: absolute;
+                left: 0;
+                bottom: 0;     
+                width: 100%;
+                height: 60px;
             }
         
     
