--- a/public/Search_Page.html
+++ b/public/Search_Page.html
@@ -102,7 +102,7 @@
                 padding: 10px;
                 text-align: center;
                 margin-left: 200px;
-                position: absolute;
+                position: fixed;
                 left: 0;
                 bottom: 0;     
                 width: 100%;
