--- a/public/Milestone1.html
+++ b/public/Milestone1.html
@@ -143,14 +143,14 @@
 
         <!-- Content -->
         <div class = "content">
-            <h1 style="text-align:center;">Milestone 2</h1>
+            <h1 style="text-align:center;"> Milestone 1 </h1>
         </div>
         <!-- End Content -->
         
 
         <!--Footer-->
         <footer>
-            <p>This is a project for IT 4403 by Gabrielle Hooper</p>
+            <p>This is a project for IT 4403 @ Kennesaw State University created by Gabrielle Hooper</p>
         </footer>
 
 
