--- a/public/Milestone4.html
+++ b/public/Milestone4.html
@@ -141,14 +141,14 @@
         <!-- End Navigation Bar -->
 
         <!-- Content -->
-        <div class = "Content">
+        <div class = "content">
             <h1 style = "text-align:center;"> Milestone 4 </h1>
         </div>
         <!-- End Content -->
 
         <!--Footer-->
         <footer>
-            <p>This is a project for IT 4403 by Gabrielle Hooper</p>
+            <p> This is a project for IT 4403 @ Kennesaw State University created by Gabrielle Hooper </p>
         </footer>
 
 
