--- a/public/Single_Book.html
+++ b/public/Single_Book.html
@@ -286,7 +286,7 @@
 
         <!--Footer-->
         <footer>
-            <p>This is a project for IT 4403 by Gabrielle Hooper</p>
+            <p>This is a project for IT 4403 @ Kennesaw State University created by Gabrielle Hooper</p>
         </footer>
 
         <!-- Dropdown Script -->
