--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 
     <!--Footer-->
     <footer style="position: fixed;">
-      <p>This is a project for IT 4403 by Gabrielle Hooper</p>
+      <p>This is a project for IT 4403 @ Kennesaw State University created by Gabrielle Hooper</p>
     </footer>
 
     <!-- Dropdown Script -->
