--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       <p>Course: IT 4403 - Advanced Web and Mobile Application</p>
       <p>Section / Semester: W-01 / Summer 2023</p>
       <p>Course Instructor: Dr. Zhigang Li</p>
-      <p>Department of Information Technology Link: <a href=""> Department of Information Technology</a></p>
+      <p>Department of Information Technology Link: <a href="http://ccse.kennesaw.edu/it"> Department of Information Technology</a></p>
 
       <!--Table of Contents - Showing other Milestone Pages-->
       <h2> Table of Contents </h2>
