Addition of Milestone 2 pages

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,24 @@
           Milestone 1 
           <i class="fa fa-caret-down"></i>
         </button>
-        <!-- Dropdown Container -->
-        <div class="dropdown-container">
-          <a href="Single_Book.html">Single Book</a>
-          <a href="Search_Page.html">Search Page</a>
-        </div>
-        <!-- Unfinished Pages -->
-        <a href="Milestone2.html">Milestone 2</a>
+          <!-- Dropdown Container -->
+          <div class="dropdown-container">
+            <a href="Single_Book.html">Single Book</a>
+            <a href="Search_Page.html">Search Page</a>
+          </div>
+        
+        <!-- Milestone 2 Dropdown Button -->
+        <button class="dropdown-btn" href="Milestone2.html">
+          Milestone 2
+          <i class="fa fa-caret-down"></i>
+        </button>
+          <!-- Dropdown Container -->
+          <div class="dropdown-container">
+            <a href="Book_Search.html">Book Search</a>
+            <a href="Bookshelf.html">Bookshelf</a>
+          </div>
+        
+          <!-- Unfinished Pages -->
         <a href="Milestone3.html">Milestone 3</a>
         <a href="Milestone4.html">Milestone 4</a>
     </div>
