Updating Navigation Bar

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,8 @@
             <a href="Single_Book.html">Single Book</a>
             <a href="Search_Page.html">Search Page</a>
           </div>
-        
         <!-- Milestone 2 Dropdown Button -->
-        <button class="dropdown-btn" href="Milestone2.html">
+        <button class="dropdown-btn">
           Milestone 2
           <i class="fa fa-caret-down"></i>
         </button>
@@ -35,8 +34,7 @@
             <a href="Book_Search.html">Book Search</a>
             <a href="Bookshelf.html">Bookshelf</a>
           </div>
-        
-          <!-- Unfinished Pages -->
+        <!-- Unfinished Pages -->
         <a href="Milestone3.html">Milestone 3</a>
         <a href="Milestone4.html">Milestone 4</a>
     </div>
