Fixing all navigation bar

--- a/public/Milestone3.html
+++ b/public/Milestone3.html
@@ -40,6 +40,7 @@
                 text-align: left;
                 cursor: pointer;
                 outline: none;
+                font-family: Georgia, 'Times New Roman', Times, serif;
             }
 
             /* Link color on hover */
