--- a/public/Milestone4.html
+++ b/public/Milestone4.html
@@ -40,6 +40,7 @@
                 text-align: left;
                 cursor: pointer;
                 outline: none;
+                font-family: Georgia, 'Times New Roman', Times, serif;
             }
 
             /* Link color on hover */
@@ -120,7 +121,7 @@
     </head>
 
     <body>
-        
+
         <!-- Navigation Bar -->
         <div class = "sidenav"> 
             <a href="index.html"> Home </a>
