--- a/public/Bookshelf.html
+++ b/public/Bookshelf.html
@@ -115,6 +115,7 @@
                 bottom: 0;     
                 width: 100%;
                 height: 60px;
+                position: absolute;
             }
 
         </style>
