Beginning Search Page

--- a/public/Bookshelf.html
+++ b/public/Bookshelf.html
@@ -108,8 +108,8 @@
                 background-color: black;
                 color: white;
                 text-align: center;
+                padding: 10px;
                 margin-left: 200px;
-                position: absolute;
                 left: 0;
                 bottom: 0;     
                 width: 100%;
