--- a/public/Book_Search.html
+++ b/public/Book_Search.html
@@ -7,8 +7,11 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="icon" type="image/png" href="favicon.png"/>
         <link rel="stylesheet" href="/src/index.css">
-  
-        <title>Milestone 1</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+
+        <title>Book Search</title>
 
         <style>
             .sidenav {
@@ -152,7 +155,25 @@
 
         <!-- Content -->
         <div class = "content">
-            <h1 style="text-align:center"> Book Search </h1>
+            <div class = "container">
+                <h1 id="title" class="text-center mt-5"> Book Search </h1>
+                <div class="row">
+                    <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
+                        <input id="search-box" type="text" class="form-control" placeholder="Search Books...">
+                        <button id="search" class="btn btn-primary" onclick=""></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="book-list">
+                <h2 class="text-center"> Search Results </h2>
+                <div id="list-output">
+                    <div class="row">
+                        
+                    </div>
+                </div>
+            </div>
+
         </div>
         <!-- End Content -->
 
@@ -181,5 +202,8 @@
         </script>
         <!-- End Dropdown Script -->
         
+        <!-- Link to Boostrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </body>
 </html>
