Changing CSS Sheet

--- a/public/Book_Search.html
+++ b/public/Book_Search.html
@@ -6,13 +6,14 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="/src/style.css">
+        <link rel="stylesheet" href="/src/style.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 
         <title>Book Search</title>
-
+        
+        <!--
         <style>
             .sidenav {
                 height: 100%; /* Full Height */
@@ -119,6 +120,7 @@
             }
 
         </style>
+        -->
 
     </head>
 
