--- a/public/Bookshelf.html
+++ b/public/Bookshelf.html
@@ -6,11 +6,12 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="/src/index.css">
+        <link rel="stylesheet" href="/src/style.css"/>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   
         <title>Bookshelf</title>
 
+        <!--
         <style>
             .sidenav {
                 height: 100%; /* Full Height */
@@ -118,7 +119,7 @@
             }
 
         </style>
-
+        -->
     </head>
 
     <!-- Calling Public Milestone 2 Bookshelf -->
