--- a/public/Search_Page.html
+++ b/public/Search_Page.html
@@ -8,7 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <link rel="icon" type="image/png" href="favicon.png"/>
+        <link rel="stylesheet" href="/src/style.css"/>
 
+        <title> Search Page </title>
+
+        <!--
         <style>
             .sidenav {
                 height: 100%; /* Full Height */
@@ -111,8 +115,9 @@
         
     
         </style>
+        -->
 
-        <title> Search Page </title>
+
     </head>
 
     <body>
