--- a/public/Milestone2.html
+++ b/public/Milestone2.html
@@ -6,10 +6,10 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="/src/index.css">
+        <link rel="stylesheet" href="/src/style.css"/>
   
         <title>Milestone 2</title>
-
+        <!--
         <style>
             .sidenav {
                 height: 100%; /* Full Height */
@@ -117,7 +117,7 @@
             }
 
         </style>
-
+        -->
     </head>
 
     <body>
