--- a/public/Milestone4.html
+++ b/public/Milestone4.html
@@ -6,10 +6,11 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="/src/index.css">
+        <link rel="stylesheet" href="/src/style.css"/>
   
         <title>Milestone 4</title>
 
+        <!--
         <style>
             .sidenav {
                 height: 100%; /* Full Height */
@@ -117,6 +118,7 @@
             }
 
         </style>
+        -->
 
     </head>
 
