--- a/public/Single_Book.html
+++ b/public/Single_Book.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <link rel="icon" type="image/png" href="favicon.png"/>
+        <link rel="stylesheet" href="/src/style.css"/>
 
         <!-- Processing provided book data -->
         <script>
@@ -130,7 +131,7 @@
             });
           </script>
 
-          
+        <!--  
         <style>
             .sidenav {
                 height: 100%; /* Full Height */
@@ -233,6 +234,7 @@
 
 
         </style>
+        -->
         
         <title> Single Book </title>
     </head>
