Search Page Corrections

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       <p>This is a project for IT 4403 @ Kennesaw State University created by Gabrielle Hooper</p>
     </footer>
 
-    <!-- Dropdown Script -->
+    <!-- Navigation Dropdown Script -->
     <script>    
       var dropdown = document.getElementsByClassName("dropdown-btn");
       var i;
@@ -86,7 +86,7 @@
         });
       }
     </script>
-    <!-- End Dropdown Script -->
+    <!-- End Navigation Dropdown Script -->
 
 
 
